<resources>
    <string name="app_name">智慧社区</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">暂无数据</string>
    <!--common-->
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="please_input">请输入</string>
    <string name="confirm">确定</string>
    <string name="delete_photo_hint">是否删除该图片？</string>
    <string name="please_waiting">请稍候...</string>
    <string name="unexpected_errors">服务不可用，请稍后再试</string>
    <string name="user_not_authorized">登录已失效，请重新登录</string>
    <string name="request_timeout_with_try">请求超时，请重试</string>
    <string name="service_not_available">服务不可用，请稍后再试</string>
    <string name="not_available_network_hint">当前网络不可用，请检查网络设置</string>
    <string name="yuan">元</string>
    <string name="money_unit">￥</string>
    <string name="more">更多</string>
    <string name="save">保存</string>

    <!--相册覆盖类库-->
    <string name="album_all_photos">所有图片</string>
    <string name="album_preview">预览</string>
    <string name="album_photos">图片</string>
    <string name="album_pictures">张图片</string>
    <string name="album_picture">张图片</string>
    <string name="album_loading">正在加载</string>
    <string name="album_cutting">请稍后</string>
    <string name="album_no_sd_card">没有SD卡</string>
    <string name="album_no_photo">没有图片</string>
    <string name="album_finish">完成</string>
    <string name="album_select">选择</string>
    <string name="album_up_to">最多</string>
    <string name="lib_confirm">确定</string>

    <!--登录-->
    <string name="phone_number">手机号</string>
    <string name="get_verfy_code">获取验证码</string>
    <string name="verfy_code">验证码</string>
    <string name="login">登录</string>
    <string name="error_phone">输入的手机号码不正确</string>
    <string name="recive_verify_code">你收到一条验证码消息</string>
    <string name="verify_code_is">[智慧社区]验证码：</string>
    <string name="reset_send">重新发送</string>
    <!--主页-->
    <string name="pay">缴费</string>
    <string name="talking">话题</string>
    <string name="repair">报修</string>
    <string name="newest_notice">最新通知</string>
    <string name="pay_record">缴费记录</string>
    <string name="repair_record">报修记录</string>
    <string name="carpet_area">室内面积</string>
    <string name="housing_area">房屋面积</string>
    <string name="square_meter">㎡</string>
    <string name="newst_notice">最新通知</string>
    <!--投诉-->
    <string name="complaint">投诉</string>
    <string name="property_phone">物业电话 400－1256-789</string>
    <string name="complaint_hint">请输入您的投诉意见，我们将不断为您改进。一经核实我们将尽快联系您～～～</string>
    <string name="please_input_complaint_content">请输入投诉内容</string>
    <!--通知公告-->
    <string name="notice">通知</string>
    <string name="announcement">公告</string>
    <string name="comment">评论</string>
    <string name="wu">物</string>
    <string name="ju">居</string>
    <string name="message">消息</string>
    <string name="notice_message">通知消息</string>
    <!--房屋租赁-->
    <string name="house_message">房源消息</string>
    <string name="house_rental">房屋租售</string>
    <string name="house_lease">租房</string>
    <string name="house_sale">售房</string>
    <string name="view_times">浏览</string>
    <string name="house_type">户型</string>
    <string name="house_area">面积</string>
    <string name="method">方式</string>
    <string name="residential_quarters_colon">小区：</string>
    <string name="floor_colon">楼层：</string>
    <string name="floor">楼层</string>
    <string name="house_detail">房屋详情</string>
    <string name="privacy_protection_hint">Ta开启了隐私保护</string>
    <string name="view_phone">拨打电话</string>
    <string name="chat">聊天</string>

    <string name="house_lease_publish">租房发布</string>
    <string name="house_sale_publish">售房发布</string>
    <string name="please_input_committe_name">输入小区名称</string>
    <string name="area">区域</string>
    <string name="decorate">装修</string>
    <string name="please_select">请选择</string>
    <string name="lease_money">租金</string>
    <string name="sale_money">售价</string>
    <string name="please_input_something">请填写</string>
    <string name="supplementary_information">补充信息</string>
    <string name="title">标题</string>
    <string name="title_hint">6-20字，不能填写电话</string>
    <string name="house_description">房屋描述</string>
    <string name="house_description_hint">房屋特征，周边配套，房东心态</string>
    <string name="contact">联系人</string>
    <string name="contact_method">联系方式</string>
    <string name="please_input_contact">请输入联系人</string>
    <string name="please_input_contact_phone">请输入联系电话</string>
    <string name="please_select_house_type">请选择户型</string>
    <string name="please_select_decorate">请选择装修</string>
    <string name="please_input_floor_infor">请填写楼层</string>
    <string name="please_input_area_infor">请填写面积</string>
    <string name="please_input_house_lease_money_infor">请填写租金</string>
    <string name="please_input_house_sale_money_infor">请填写售价</string>
    <string name="all_sale">整售</string>
    <string name="belong_floor">所在楼层</string>
    <string name="all_floor">，整栋</string>
    <string name="floor_unit">楼</string>
    <string name="house_area_unit">平方米</string>
    <string name="lease_money_unit">元/月</string>
    <string name="sale_money_unit">万</string>

    <string name="please_input_belong_floor">请输入所在楼层数</string>
    <string name="please_input_all_floor">请输入整栋层数</string>
    <string name="please_input_house_area">请输入房屋面积</string>

    <string name="please_input_house_lease_money">请输入租金</string>
    <string name="please_input_house_sale_money">请输入售价</string>
    <!--报修-->
    <string name="please_describe_question">请简单描述问题</string>
    <string name="repair_type">报修类别</string>
    <string name="belong_community">所在小区</string>
    <string name="address_detail">详细地址</string>
    <string name="progressing">进行</string>
    <string name="finished">完成</string>
    <string name="detail">详情</string>
    <string name="delete">删除</string>
    <string name="publish">发布</string>
    <string name="award">赏</string>
    <string name="property_assignment_order">物业指派工单</string>
    <string name="repair_award">打赏</string>
    <string name="money_total">金额</string>
    <string name="money_total_hint">0.00</string>
    <string name="repair_award_default_title">恭喜发财，大吉大利</string>
    <string name="insert_money_into_red_packets">塞钱进红包</string>
    <string name="repair_detail">报修详情</string>
    <string name="view_progress">查看流程</string>
    <string name="progress">流程</string>
    <string name="delete_repair_hint">是否删除该条报修？</string>
    <!--个人中心-->
    <string name="person_infor">个人中心</string>
    <string name="sign_hint">每日签到可得到1金币</string>
    <string name="sign_immediately">立即签到</string>
    <string name="contact_phone">联系电话</string>
    <string name="own_community">我的小区</string>
    <string name="contact_property">联系物业</string>
    <string name="exit_account">退出当前账号</string>
    <string name="upload_portrait_success">已上传头像</string>
    <string name="upload_portrait_faild">上传头像失败</string>
    <string name="update_portrait_faild">更新头像失败</string>
    <string name="update_nickname_faild">修改昵称失败</string>
    <string name="update_nickname_success">修改昵称成功</string>
    <string name="change_community">切换小区</string>
    <string name="own_nickname">我的昵称</string>
    <string name="alter_nickname">修改昵称</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="input_nickname_hint">好昵称可以让邻居们更容易记住你</string>
    <!--物业缴费-->
    <string name="property_payment">物业缴费</string>
    <string name="payment">支付</string>
    <string name="please_pay">请支付</string>
    <string name="has_pay">已支付</string>
    <string name="three_month">三个月</string>
    <string name="six_month">六个月</string>
    <string name="one_year">一年</string>
    <string name="property_fee">物业费</string>
    <string name="total_area">总面积</string>
    <string name="property_fee_pay_success">已成功支付，感谢您的使用！</string>
    <string name="select_payment_method">选择支付方式</string>
    <string name="property_payment_hint">此次物业费缴费需要支付</string>
    <string name="alipay_payment">支付宝支付</string>
    <string name="weixin_payment">微信支付</string>

    <string name="payment_detail">缴费详情</string>
    <!--话题-->
    <string name="own">我的</string>
    <string name="community">社区</string>
    <string name="like">赞</string>
    <string name="topic_publish">话题发布</string>
    <string name="topic_publish_hint">请输入要发布的内容</string>
    <string name="del">删</string>
    <string name="send">发送</string>
    <string name="reply_colon">回复:</string>
    <string name="topic_detail">话题详情</string>
    <string name="publish_success">发布成功</string>
    <string name="upload_image_faild">上传图片失败</string>
    <string name="browse">浏览</string>
    <string name="time">次</string>
    <string name="delete_topic_hint">确定删除该话题？</string>
    <string name="delete_topic_success">已删除话题</string>
    <string name="copy">复制</string>
    <string name="has_copy_hint">已复制到剪贴板</string>
    <string name="total">共></string>
    <string name="replay_count">条回复></string>
    <string name="comment_detail">评论详情</string>
    <string name="replay_comment">回复评论</string>
    <string name="strip">条</string>
    <!--签到-->
    <string name="back">返回</string>
    <string name="click_sign">点击签到</string>
    <string name="sign">签到</string>
    <string name="coin">金币</string>
    <string name="sign_in_day">连续签到天数</string>
    <string name="sign_describe">签到说明</string>
    <string name="sign_success">签到成功</string>
    <string name="today_has_sign">今日已签到</string>
    <string name="sign_describe_hint">每天签到一次，获取对应积分；连续签到，积分更多哦！</string>
    <!--Array-->
    <array name="house_type_room">
        <item>1室</item>
        <item>2室</item>
        <item>3室</item>
        <item>4室</item>
    </array>
    <array name="house_type_hall">
        <item>1厅</item>
        <item>2厅</item>
        <item>3厅</item>
        <item>4厅</item>
    </array>

    <array name="house_type_guards">
        <item>1卫</item>
        <item>2卫</item>
        <item>3卫</item>
        <item>4卫</item>
    </array>
    <array name="decorate_type">
        <item>简单装修</item>
        <item>中等装修</item>
        <item>精装修</item>
        <item>豪华装修</item>
        <item>毛坯</item>
    </array>
    <array name="rent_ways">
        <item>合租</item>
        <item>整租</item>
    </array>
    <array name="weeks">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </array>

</resources>
