<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    >
    <com.starlight.mobile.android.lib.view.CusHeadView
        android:id="@+id/notice_layout_ch_head"
        style="@style/common_head_style"
        mAttr:chHead_leftImg="@mipmap/ic_back"
        mAttr:chHead_title="@string/topic_publish"
        mAttr:chHead_rightText="@string/publish"
        mAttr:chHead_title_padding_left="0dip" />
    <View style="@style/common_line_style"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:background="@android:color/white"
        android:elevation="8dip"
        android:hint="@string/topic_publish_hint"
        android:gravity="top"
        android:padding="10dip"
        android:textSize="14sp"
        android:layout_margin="20dip"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginBottom="20dip"
        android:layout_height="wrap_content"/>

</LinearLayout>