<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/common_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.starlight.mobile.android.lib.view.CusHeadView
        android:id="@+id/publish_house_layout_ch_head"
        style="@style/common_head_style"
        mAttr:chHead_leftImg="@mipmap/ic_back"
        mAttr:chHead_title="@string/house_rental"
        mAttr:chHead_title_padding_left="0dip" />
    <View style="@style/common_line_style"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/publish_house_layout_et_committe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:padding="@dimen/margin"
                android:hint="@string/please_input_committe_name"
                android:textColor="@color/common_text_color"
                android:textColorHint="@color/common_light_text_color"
                android:textSize="14sp" />

            <View
                android:id="@+id/publish_house_layout_v_committe_name"
                style="@style/common_line_style"
                android:layout_below="@+id/publish_house_layout_et_committe_name" />

            <LinearLayout
                android:id="@+id/publish_house_layout_ll_first_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_committe_name"
                android:orientation="horizontal">

                <com.gkzxhn.wisdom.customview.CusTextItem
                    android:id="@+id/publish_house_layout_cti_floor"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickListener"
                    mAttr:cti_content="@string/please_input_something"
                    mAttr:cti_title="@string/floor" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@color/common_line_color" />

                <com.gkzxhn.wisdom.customview.CusTextItem
                    android:id="@+id/publish_house_layout_cti_house_area"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:onClick="onClickListener"
                    android:layout_weight="1"
                    mAttr:cti_content="@string/please_input_something"
                    mAttr:cti_title="@string/house_area" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@color/common_line_color" />

                <com.gkzxhn.wisdom.customview.CusTextItem
                    android:id="@+id/publish_house_layout_cti_house_type"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickListener"
                    mAttr:cti_content="@string/please_select"
                    mAttr:cti_title="@string/house_type" />
            </LinearLayout>

            <View
                style="@style/common_line_style"
                android:layout_below="@+id/publish_house_layout_ll_first_item" />

            <LinearLayout
                android:id="@+id/publish_house_layout_ll_second_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_ll_first_item"
                android:orientation="horizontal">

                <com.gkzxhn.wisdom.customview.CusTextItem
                    android:id="@+id/publish_house_layout_cti_method"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickListener"
                    mAttr:cti_content="@string/please_select"
                    mAttr:cti_title="@string/method" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@color/common_line_color" />

                <com.gkzxhn.wisdom.customview.CusTextItem
                    android:id="@+id/publish_house_layout_cti_rent_money"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    mAttr:cti_content="@string/please_input_something"
                    android:onClick="onClickListener"
                    mAttr:cti_title="@string/rent_money" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@color/common_line_color" />

                <com.gkzxhn.wisdom.customview.CusTextItem
                    android:id="@+id/publish_house_layout_cti_decorate"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickListener"
                    mAttr:cti_content="@string/please_select"
                    mAttr:cti_title="@string/decorate" />
            </LinearLayout>

            <View
                android:id="@+id/publish_house_layout_v_second_item"
                android:layout_width="match_parent"
                android:layout_height="10dip"
                android:layout_below="@+id/publish_house_layout_ll_second_item"
                android:background="@color/common_bg_color" />

            <TextView
                android:id="@+id/publish_house_layout_tv_supplementary_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_second_item"
                android:layout_margin="@dimen/margin"
                android:text="@string/supplementary_information"
                android:textColor="@color/common_text_color" />

            <View
                android:id="@+id/publish_house_layout_v_supplementary_information"
                style="@style/common_line_style"
                android:layout_below="@+id/publish_house_layout_tv_supplementary_information" />

            <TextView
                android:id="@+id/publish_house_layout_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_supplementary_information"
                android:layout_margin="@dimen/margin"
                android:text="@string/title"
                android:textColor="@color/common_text_color"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/publish_house_layout_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_supplementary_information"
                android:layout_toRightOf="@+id/publish_house_layout_tv_title"
                android:background="@null"
                android:gravity="right"
                android:maxEms="20"
                android:hint="@string/title_hint"
                android:lines="1"
                android:padding="@dimen/margin"
                android:textSize="12sp" />

            <View
                android:id="@+id/publish_house_layout_v_title"
                style="@style/common_line_style"
                android:layout_below="@+id/publish_house_layout_et_title" />

            <TextView
                android:id="@+id/publish_house_layout_tv_house_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_title"
                android:layout_margin="@dimen/margin"
                android:text="@string/house_description"
                android:textColor="@color/common_text_color"
                android:textSize="12sp" />

            <com.starlight.mobile.android.lib.materialedittext.MaterialEditText
                android:id="@+id/publish_house_layout_et_house_description"
                android:layout_width="match_parent"
                android:layout_height="80dip"
                android:layout_below="@+id/publish_house_layout_tv_house_description"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:gravity="top"
                android:hint="@string/house_description_hint"
                android:textColor="@color/common_light_text_color"
                android:textSize="12sp"
                mAttr:met_floatingLabel="none"
                mAttr:met_floatingLabelPadding="0dip"
                mAttr:met_helperTextAlwaysShown="true"
                mAttr:met_hideUnderline="true"
                mAttr:met_maxCharacters="800" />

            <LinearLayout
                android:id="@+id/publish_house_layout_ll_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/publish_house_layout_et_house_description"
                android:layout_gravity="right"
                android:layout_margin="@dimen/margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/publish_house_layout_iv_third"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:onClick="onClickListener"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/repair_take_photo"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/publish_house_layout_iv_second"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="5dip"
                    android:onClick="onClickListener"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/repair_take_photo"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/publish_house_layout_iv_first"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="5dip"
                    android:onClick="onClickListener"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/repair_take_photo" />
            </LinearLayout>

            <View
                android:id="@+id/publish_house_layout_v_house_description"
                android:layout_width="match_parent"
                android:layout_height="10dip"
                android:layout_below="@+id/publish_house_layout_ll_images"
                android:background="@color/common_bg_color" />

            <TextView
                android:id="@+id/publish_house_layout_tv_contact_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_house_description"
                android:layout_margin="@dimen/margin"
                android:text="@string/contact_method"
                android:textColor="@color/common_text_color" />

            <View
                android:id="@+id/publish_house_layout_v_contact_method"
                style="@style/common_line_style"
                android:layout_below="@+id/publish_house_layout_tv_contact_method" />

            <TextView
                android:id="@+id/publish_house_layout_tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/publish_house_layout_et_contact"
                android:layout_alignTop="@+id/publish_house_layout_et_contact"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center_vertical"
                android:text="@string/contact"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/publish_house_layout_et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_contact_method"
                android:layout_toRightOf="@+id/publish_house_layout_tv_contact"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/please_input_contact"
                android:lines="1"
                android:padding="10dip"
                android:textSize="12sp" />

            <View
                android:id="@+id/publish_house_layout_v_contact"
                style="@style/common_line_style"
                android:layout_below="@+id/publish_house_layout_et_contact" />

            <TextView
                android:id="@+id/publish_house_layout_tv_contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/publish_house_layout_et_contact_phone"
                android:layout_alignTop="@+id/publish_house_layout_et_contact_phone"
                android:layout_marginLeft="@dimen/margin"

                android:gravity="center_vertical"
                android:text="@string/contact_method"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/publish_house_layout_et_contact_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publish_house_layout_v_contact"
                android:layout_toRightOf="@+id/publish_house_layout_tv_contact_phone"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/please_input_contact_phone"
                android:inputType="phone"
                android:lines="1"
                android:padding="10dip"
                android:textSize="12sp" />
        </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/common_btn_selector"
        />
</LinearLayout>